# BlizzardDiskMark

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
installer/: BlizzardDiskMark.wxs  ChainInstaller.wxs  License.rtf
res/: Icon.xcf
scripts/: replace_in_file.py
src/BlizzardIgloo/: .qmlls.ini  CMakeLists.txt  qmldir
src/Igloo/: .qmlls.ini  Button.qml  CMakeLists.txt  Label.qml  MenuBar.qml  MenuItem.qml  qmldir
src/Priscilla/: DialogFx.cpp  DialogFx.h  StaticFx.h
src/app/: .qmlls.ini  AboutDlg.cpp  AboutDlg.h  CMakeLists.txt  DiskBench.cpp  DiskBench.h  DiskMark.cpp  DiskMark.h  DiskMark.ui  DiskMarkDlg.cpp  DiskMarkDlg.h  DiskMarkDlg.qml  FontSelectionDlg.cpp  FontSelectionDlg.h  ScoreLabel.cpp  ScoreLabel.h  SettingsDlg.cpp  cmake_install.cmake
src/app/BlizzardDiskMark.app/Contents/: Info.plist
src/app/ScoreLabel/: Button.qml  ComboBox.qml  Label.qml  ScoreLabel.cpp  qmldir
src/apps/BlizzardDiskMark/: .qmlls.ini  AboutDlg.h  AboutDlg.qml  CMakeLists.txt  DiskBench.cpp  DiskBench.h  DiskMark.cpp  DiskMarkDlg.cpp  DiskMarkDlg.h  DiskMarkDlg.qml  Makefile  SettingsDlg.cpp  SettingsDlg.h  application.qrc
src/apps/BlizzardDiskMark/installer/: BlizzardDiskMark.wxs  ChainInstaller.wxs  License.rtf
src/apps/BlizzardDiskMark/res/: DiskMark.rc  MITLicense.txt
src/lib/: stdafx.h
src/modules/BlizzardIgloo/: .qmlls.ini  Button.qml  CMakeLists.txt  ComboBox.qml  Label.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  TestLabel.qml  TestRow.qml  TextField.qml  qmldir
